making it pretty

--- a/2025-ibis_diversity_statement_workshop.html
+++ b/2025-ibis_diversity_statement_workshop.html
@@ -3144,7 +3144,42 @@ line-height: 1.9;
 }
 </style>
 
-  <link rel="stylesheet" href="styles.css" type="text/css" />
+  <style type="text/css">
+.reveal {
+background-color: #4B2E83; 
+color: #F1F1F1; 
+font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+.reveal h1,
+.reveal h2,
+.reveal h3,
+.reveal h4,
+.reveal h5,
+.reveal h6 {
+color: #FFFFFF; 
+font-weight: bold;
+}
+
+.reveal a {
+color: #B7A57A; 
+text-decoration: underline;
+}
+.reveal a:hover {
+color: #FFFFFF;
+background-color: #B7A57A;
+text-decoration: none;
+padding: 2px 4px;
+border-radius: 3px;
+}
+
+.reveal code {
+background-color: #282828; 
+color: #F1F1F1;
+padding: 2px 4px;
+border-radius: 3px;
+font-family: 'Courier New',
+</style>
 
 </head>
 
@@ -3163,103 +3198,169 @@ line-height: 1.9;
           </hgroup>
   </slide>
 
-<slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Welcome!</h2></hgroup><article  id="welcome">
+<slide class=""><hgroup><h2></h2></hgroup><article  id="section" class="flexbox vcenter">
 
-<aside class='note'><section><ul>
-<li>Grounding, taking 2 seconds to get everyone to change gears into our space &amp; possibly a land acknowledgement</li>
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Welcome!</h2></hgroup><article  id="welcome">
+
+<aside class='note'><section><ul class = 'build'>
+<li>Grounding, taking 2 seconds to get everyone to change gears into our space</li>
+<li>Some quick notes, today’s conversation is a &lsquo;yes, and&rsquo; conversation - not a &lsquo;yes, but&rsquo; we’re in the mindframe that we are honing skills, not debating the validity of those things</li>
 </ul></section></aside>
 
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
+</article></slide><slide class=""><hgroup><h2>About Me</h2></hgroup><article  id="about-me">
 
-</article></slide><slide class=""><hgroup><h2>About Me </h2></hgroup><article  id="about-me">
-
-<ul>
-<li>three points of interest/ alignment with the reason I’m giving the presentation</li>
-<li>my recognition</li>
-<li>why i’m qualified to do this</li>
+<ul class = 'build'>
+<li>Marine Bio ’21</li>
 </ul>
+
+<p><a href='images/marbio.jpeg' title=''>image!</a></p>
+
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-1">
+
+<ul class = 'build'>
+<li>PhD loading…</li>
+</ul>
+
+<p><a href='images/boundless.jpg' title=''>image!</a></p>
+
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-2">
+
+<ul class = 'build'>
+<li>Educator</li>
+</ul>
+
+<p><a href='images/2024yi_boat.jpeg' title=''>image!</a> <a href='images/sicb2025.jpeg' title=''>image!</a></p>
 
 </article></slide><slide class=""><hgroup><h2>About You</h2></hgroup><article  id="about-you">
 
-<ul>
-<li>temp check</li>
-<li>pick a community builder</li>
+<p><a href='images/boxer.jpeg' title=''>image!</a></p>
+
+<ul class = 'build'>
+<li>Temperature check</li>
+<li>If you could pick up a walk-up song, what would it be?</li>
 </ul>
 
-</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>What is a Diversity Statement? (this is where I’ll ask about what folks know or don’t)</h2></hgroup><article  id="what-is-a-diversity-statement-this-is-where-ill-ask-about-what-folks-know-or-dont">
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-3" class="flexbox vcenter">
 
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section">
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>What is a Diversity Statement?</h2></hgroup><article  id="what-is-a-diversity-statement">
 
-<ul>
+<aside class='note'><section><ul class = 'build'>
+<li>Ask for</li>
+</ul></section></aside>
+
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-4">
+
+<ul class = 'build'>
 <li>Also known as a Perspectives or Experience Statement</li>
 <li>One of three statements in an application package</li>
-<li>Least clear and most misunderstood piece of the package (we’re going to take a look at why before we dive into details because context is crucial for crafting a solid statement)</li>
+<li>Least clear and most misunderstood piece of the package
+
+<aside class='note'><section><p>(we’re going to take a look at why before we dive into details because context is crucial for crafting a solid statement)</p></section></aside></li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Timeline</h2></hgroup><article  id="timeline">
+</article></slide><slide class=""><hgroup><h2>Timeline </h2><h3> Inception</h3></hgroup><article  id="timeline-inception">
 
-<ul>
+<ul class = 'build'>
 <li>Around since early 2000s in the UC system</li>
-<li>Widely adopted in early 2010s by universities for faculty positions</li>
-<li>Called into question in mid-2010s by creating the false dichotomy of DEI v Merit- based hiring</li>
-<li>UC system made the statements mandatory in 2018 for tenure-track position applications</li>
-<li>2020 saw an almost absolute adoption of the practice in response to the murder of George Floyd and the inception of the nationwide Black Lives Matter movement</li>
-<li>2022 UW rejected making the statement a requirement for tenure-track applications</li>
-<li>Banned in public institutions in Texas, North Carolina and Missouri in 2023 (because it isn’t a &lsquo;merit-based&rsquo; metric)</li>
-<li>2025 it is often a requirement in non-tenure track applications, often optional</li>
+<li>Early 2010s Widely adopted by universities for faculty positions</li>
+<li>Mid 2010s Called into question by creating the false dichotomy of DEI v Merit- based hiring</li>
+<li>2018 UC system made the statements mandatory for tenure-track position applications
+
+<aside class='note'><section><p>Prior to the politicization of DEI, these statements existed This is a normal part of a job application - &lsquo;is this candidate a good fit for our culture&rsquo; We didn’t see the politicization until around the time of political rhetoric It is important to note that all practices need to be interrogated - academic applications are no different, this is an iterative practice and unfortunately, the narrative was hijacked by folks outside of the academy and we move into a contentious era in the 2020s</p></section></aside></li>
 </ul>
+
+</article></slide><slide class=""><hgroup><h2>Timeline </h2><h3> Current</h3></hgroup><article  id="timeline-current">
+
+<ul class = 'build'>
+<li>2020 Near complete adoption of the practice <strong>allegedly</strong> in response to the murder of George Floyd</li>
+<li>2022 UW rejected making the statement a requirement for tenure-track applications</li>
+<li>2023 Banned in public institutions in Texas, North Carolina and Missouri</li>
+<li>2025 it is often a requirement in non-tenure track applications, often optional
+
+<aside class='note'><section><p>Some insititutions were &lsquo;virtue signalling&rsquo; by doubling down on their adoption - but many were not.</p></section></aside></li>
+</ul>
+
+(because it isn’t a &lsquo;merit-based&rsquo; metric)
+
+</div>
 
 </article></slide><slide class=""><hgroup><h2>Purpose</h2></hgroup><article  id="purpose">
 
-<ul>
+<ul class = 'build'>
 <li>Academic search committees can gauge a candidate’s &lsquo;fit&rsquo; with the institution/ student body</li>
 <li>Documentation method to include the unpaid labor and often overlooked work of non-majority candidates</li>
 </ul>
 
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-5" class="flexbox vcenter">
+
 </article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>So, <em>what</em> is it actually?</h2></hgroup><article  id="so-what-is-it-actually">
 
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-1">
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-6">
 
-<ul>
+<ul class = 'build'>
 <li>Fundamental demonstration of your values, commitments and capabilities in an academic position</li>
-<li>3 areas of demonstration (teaching, research, service) - fundamental parts of the academic position</li>
+<li>Three areas of demonstration - the core of the academic position
+
+<ul class = 'build'>
+<li>Research</li>
+<li>Teaching</li>
+<li>Service</li>
+</ul></li>
 <li>Another opportunity to stand out</li>
 </ul>
 
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-7" class="flexbox vcenter">
+
 </article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>What it is not</h2></hgroup><article  id="what-it-is-not">
 
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-2">
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-8">
 
-<ul>
-<li>Not about you, your identities or privileges (counterintuitive, but explain the difference amongst the three statements and why this is true)</li>
+<ul class = 'build'>
+<li>Not about you
+
+<ul class = 'build'>
+<li>Your identities</li>
+<li>Your privileges</li>
+</ul></li>
 <li>Oppression Olympics</li>
 <li>Pie in the Sky, We are the World, pontification</li>
 </ul>
 
+<aside class='note'><section><ul class = 'build'>
+<li>I know this seems counterintuitive, but ultimately this package is not about you but about how you translate the work</li>
+<li>Research statements are as much about your work as they are about your collaborations and how you’ve made the most of the opportunity</li>
+<li>Teaching are as much about your practice as it relates to how you’ve translated your philosophy to the students and if it is effective</li>
+<li>The DS is no different, it is not about you but rather how you use the tools you have or don’t to connect to the MVV of the institution</li>
+</ul></section></aside>
+
 </article></slide><slide class=""><hgroup><h2>How does it fit in your application package?</h2></hgroup><article  id="how-does-it-fit-in-your-application-package">
 
-<ul>
+<ul class = 'build'>
 <li>Recap teaching statement purpose</li>
 <li>Recap research statement purpose</li>
 <li>Bow on the package</li>
 </ul>
 
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-9" class="flexbox vcenter">
+
 </article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Why write one?</h2></hgroup><article  id="why-write-one">
 
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-3">
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-10">
 
-<ul>
+<ul class = 'build'>
 <li>Perfect opportunity to align your MVV with the institution</li>
 <li>Chance to expand on what you’ve already written in your teaching &amp; research statements</li>
 <li>Demonstrates your understanding of &lsquo;DEI&rsquo; beyond visible diversity</li>
 <li>How to thematically present yourself as a candidate by weaving your narrative across all 3 statements</li>
 </ul>
 
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-11" class="flexbox vcenter">
+
 </article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>How to Write a Diversity Statement</h2></hgroup><article  id="how-to-write-a-diversity-statement">
 
 </article></slide><slide class=""><hgroup><h2>Preparation </h2><h3> Things You’ll Need</h3></hgroup><article  id="preparation-things-youll-need">
 
-<ol>
+<ol class = 'build'>
 <li>Identify the institution’s MVV + the department/ committee’s perspective on that MVV ( I will provide one per table, make a few copies and pass them out)</li>
 <li>Writing Tool/ Laptop</li>
 <li>Your CV <strong>Note</strong> - we’re assuming we have the job description, did our research on the students, faculty, etc</li>
@@ -3267,7 +3368,7 @@ line-height: 1.9;
 
 </article></slide><slide class=""><hgroup><h2>Process </h2><h3> Step 1: Institution’s MVV</h3></hgroup><article  id="process-step-1-institutions-mvv">
 
-<ul>
+<ul class = 'build'>
 <li>What resonates?</li>
 <li>What’s itchy?</li>
 <li>What feels genuine?</li>
@@ -3278,7 +3379,7 @@ line-height: 1.9;
 
 <p>This exercise is essentially creating a positionality statement - let’s walk through how to do it</p>
 
-<ul>
+<ul class = 'build'>
 <li>Identity/ Privilege Wheel quick exercise</li>
 <li>Values + Teaching Philosophy Alignment</li>
 <li>What do you know about current research in pedagogy/ research/ student engagement?</li>
@@ -3286,7 +3387,7 @@ line-height: 1.9;
 
 </article></slide><slide class=""><hgroup><h2>Process </h2><h3> Step 3: Run the Stats</h3></hgroup><article  id="process-step-3-run-the-stats">
 
-<ul>
+<ul class = 'build'>
 <li>List SPECIFIC activities you’ve created/ participated in</li>
 <li>List SPECIFIC organizations you’ve created/ participated in</li>
 <li>List SPECIFIC teaching tactics/ strategies you’ve employed</li>
@@ -3295,7 +3396,7 @@ line-height: 1.9;
 
 </article></slide><slide class=""><hgroup><h2>Process </h2><h3> Step 4: Synthesis</h3></hgroup><article  id="process-step-4-synthesis">
 
-<ul>
+<ul class = 'build'>
 <li>What is sticking out to you?</li>
 <li>Are you balanced across the 3 areas (research, teaching, service)</li>
 <li>How are you feeling emotionally? - not a pity party</li>
@@ -3304,18 +3405,20 @@ line-height: 1.9;
 
 </article></slide><slide class=""><hgroup><h2>Process </h2><h3> Step 5: Drafting the Statement</h3></hgroup><article  id="process-step-5-drafting-the-statement">
 
-<ul>
+<ul class = 'build'>
 <li>Framing here is key (you know you’re strengths and weaknesses now, so play to your strengths)</li>
 <li>Reinforce how you and your work align with the institution’s MVV</li>
 <li>Hook your reader - personal anecdote</li>
 <li>Tell a cohesive story with specific examples</li>
 </ul>
 
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-12" class="flexbox vcenter">
+
 </article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Things to Keep in Mind</h2></hgroup><article  id="things-to-keep-in-mind">
 
 </article></slide><slide class=""><hgroup><h2>Pitfalls to Avoid</h2></hgroup><article  id="pitfalls-to-avoid">
 
-<ul>
+<ul class = 'build'>
 <li>Oversharing your personal story - this is not about you, but what you can bring to the institution (remember that legally they cannot take into account your race/ ethnicity, faith, disability, any other protected status)</li>
 <li>Conversely, over-sanitizing your statement is a red flag (you cannot remove yourself from the process, don’t try)</li>
 <li>Lack of specificity - theory is just an unpracticed thought in this regard</li>
@@ -3326,7 +3429,7 @@ line-height: 1.9;
 
 </article></slide><slide class=""><hgroup><h2>Tips for Writing &amp; Editing</h2></hgroup><article  id="tips-for-writing-editing">
 
-<ul>
+<ul class = 'build'>
 <li>Remember: &ldquo;Diversity statements are fundamentally about your values, commitments, and capabilities, and not necessarily your identities and the ways it shapes your work.&rdquo;</li>
 <li>If you don’t have much experience, speak to where you will implement inclusive practices. Demonstrate what you’ve learned and how you can implement it. (this signals your understanding and shows a willingness to act)</li>
 <li>Limited experience does not make you a terrible educator, just a new one. (Don’t let your beliefs around facts to supersede the facts themselves)</li>
@@ -3338,20 +3441,22 @@ line-height: 1.9;
 <li>Get another set of eyes on that joint! (preferably someone who has the position you want- leverage your upper-level network, peers are great but may lack the scope to really help)</li>
 </ul>
 
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-13" class="flexbox vcenter">
+
 </article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Wrapping it up</h2></hgroup><article  id="wrapping-it-up">
 
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-4">
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-14">
 
-<ul>
+<ul class = 'build'>
 <li>Remember, it is not who you are, but what you can do</li>
 <li>Specificity, specificity, specificity!</li>
 <li>Connect this statement to your teaching and research statements for maximum impact</li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-5">
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section-15">
 
-<ul>
-<li>Resources can be found here:</li>
+<ul class = 'build'>
+<li>Resources can be found here: <a href='images/gh_logo.jpeg' title=''>image!</a> github.com/ChrisMantegna/diversity_statements</li>
 <li>Questions?</li>
 </ul></article></slide>
 
